--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-Try this out here: http://johnknott.github.com/
+<h1>Try this out here: http://johnknott.github.com/</1>
+
+<p>I am sure it could be much more elegant but theres a dearth of documentation about this as it's all so new.</p>
