Edited README via GitHub

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
-<h1>Try this out here: http://johnknott.github.com/</1>
+Try this out here: http://johnknott.github.com/
 
-<p>I am sure it could be much more elegant but theres a dearth of documentation about this as it's all so new.</p>
+I am sure it could be much more elegant but theres a dearth of documentation about this as it's all so new.
+
+Any questions, dropm me a mail.
