Edited README via GitHub

--- a/README
+++ b/README
@@ -2,4 +2,4 @@ Try this out here: http://johnknott.github.com/
 
 I am sure it could be much more elegant but theres a dearth of documentation about this as it's all so new.
 
-Any questions, dropm me a mail.
+Any questions, drop me a mail.
