Edited README via GitHub

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 Try this out here: http://johnknott.github.com/
 
-I am sure it could be much more elegant but theres a dearth of documentation about this as it's all so new.
+I am sure it could be much more elegant, I'll try and update it when I get to know the framework better.
 
 Any questions, drop me a mail.
